k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sweter-deployment
  labels:
    app: sweter
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sweter-api
  template:
    metadata:
      labels:
        app: sweter-api
    spec:
      containers:
        - name: sweter-api
          image: noksik/sweter:1.0.0
          ports:
            - containerPort: 8080
