k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sweter
spec:
  selector:
    app.kubernetes.io/name: sweter-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
